--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Seni seviyorum Gülben</title>
+  <title>Seni seviyorum Kübra</title>
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Montserrat:wght@300;600&display=swap" rel="stylesheet">
   <style>
     :root{ --bg:#071029; --card:#0d1630; --text:#f7f9fc; --accent:#ff2d55; }
