--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
     <div class="signature">
       <div class="sig-box">Derviş</div>
-      <div class="note">Sevgilin</div>
+      <div class="note">Kocan <3 </div>
     </div>
   </div>
 
