--- a/index.html
+++ b/index.html
@@ -102,12 +102,12 @@ position:absolute;left:50%;top:50%;transform:translate(-50%,-50%) translateY(10p
 <script>
 // Quotes tailored to Balık (Pisces) — dreamy, empathetic, duygusal, yaratıcı
 const quotes = [
+"Sen benim iyikimsin Kübrammm.",
+"Kalbimin ritmini bozan tek doktor sensin.",  
 "Seninle her hayal gerçek gibi; rüyalarım en güzel yerde seninle buluşuyor.",
 "Gözlerinin içinde kaybolmak, dünyadaki en huzurlu limanımı bulmak gibi.",
-"Senin empatin bana güç veriyor; kalbini hissetmek, benim için bir mucize.",
 "Ruhun deniz kadar derin; her dalgada sana biraz daha âşık oluyorum.",
-"Seninle geçen anlar şiir oluyor — ben kelimelerle yetinemiyorum.",
-"Hayatın tüm pusulası sensin; sezgilerinle yolumu aydınlatıyorsun."
+"Seninle geçen anlar şiir oluyor — ben kelimelerle yetinemiyorum."
 ];
 
 const container = document.querySelector('.quotes');
