--- a/index.html
+++ b/index.html
@@ -19,62 +19,100 @@ width:100%;max-width:820px;background:linear-gradient(180deg, rgba(255,255,255,0
 border-radius:16px;padding:36px;box-shadow:0 12px 30px rgba(2,6,23,0.6);text-align:center;position:relative;overflow:hidden;
 }
 
-h1{font-family:'Playfair Display', serif;margin:0;font-size:clamp(26px,4.5vw,44px);display:inline-flex;gap:14px;align-items:center;font-weight:700}
-.line{white-space:nowrap}
+h1{
+font-family:'Playfair Display', serif;
+margin:0;
+font-size:clamp(24px,4.5vw,44px);
+display:inline-flex;
+flex-wrap:wrap;
+gap:10px;
+align-items:center;
+justify-content:center;
+font-weight:700;
+text-align:center;
+}
+.line{white-space:normal;text-align:center}
 
-.heart-wrap{width:54px;height:54px;margin-left:6px;display:inline-block;position:relative;transform-origin:center;animation:float 3s ease-in-out infinite}
-@keyframes float{0%{transform:translateY(0) rotate(-6deg)}50%{transform:translateY(-8px) rotate(6deg)}100%{transform:translateY(0) rotate(-6deg)}}
-
-/* Fixed heart shape */
+/* Kalp alanı */
+.heart-wrap{
+width:54px;height:54px;margin-left:6px;display:inline-block;
+position:relative;transform-origin:center;
+animation:float 3s ease-in-out infinite;
+}
+@keyframes float{
+0%{transform:translateY(0) rotate(-6deg)}
+50%{transform:translateY(-8px) rotate(6deg)}
+100%{transform:translateY(0) rotate(-6deg)}
+}
 .heart{
-  width:54px;
-  height:48px;
-  position:relative;
-  display:inline-block;
-  animation:beat 1000ms infinite;
-  transform:rotate(-45deg);
+width:54px;height:48px;position:relative;
+display:inline-block;animation:beat 1000ms infinite;
+transform:rotate(-45deg);
 }
 .heart:before,
 .heart:after{
-  content:'';
-  width:26px;
-  height:40px;
-  position:absolute;
-  left:27px;
-  transform-origin:0 100%;
-  background:var(--accent);
-  border-radius:26px 26px 0 0;
-  transform:rotate(-45deg);
-  box-shadow:0 8px 20px rgba(255,45,85,0.22);
+content:'';width:26px;height:40px;position:absolute;left:27px;
+transform-origin:0 100%;background:var(--accent);
+border-radius:26px 26px 0 0;transform:rotate(-45deg);
+box-shadow:0 8px 20px rgba(255,45,85,0.22);
 }
 .heart:after{
-  left:0;
-  transform:rotate(45deg);
-  transform-origin:100% 100%;
+left:0;transform:rotate(45deg);transform-origin:100% 100%;
 }
-
-@keyframes beat{0%{transform:rotate(-45deg) scale(1)}30%{transform:rotate(-45deg) scale(1.14)}45%{transform:rotate(-45deg) scale(0.98)}60%{transform:rotate(-45deg) scale(1.06)}100%{transform:rotate(-45deg) scale(1)}}
+@keyframes beat{
+0%{transform:rotate(-45deg) scale(1)}
+30%{transform:rotate(-45deg) scale(1.14)}
+45%{transform:rotate(-45deg) scale(0.98)}
+60%{transform:rotate(-45deg) scale(1.06)}
+100%{transform:rotate(-45deg) scale(1)}
+}
 
 .subtitle{margin:12px 0 22px;font-weight:300;opacity:0.95;font-size:15px}
 
-/* rotating quotes */
 .quotes{
-height:92px;display:flex;align-items:center;justify-content:center;position:relative;overflow:hidden;margin:8px 0 18px;
+height:92px;display:flex;align-items:center;justify-content:center;
+position:relative;overflow:hidden;margin:8px 0 18px;
 }
 .quote{
-position:absolute;left:50%;top:50%;transform:translate(-50%,-50%) translateY(10px);opacity:0;transition:all 600ms cubic-bezier(.2,.9,.3,1);font-size:18px;max-width:86%;font-weight:500;line-height:1.35;font-family:Montserrat;
+position:absolute;left:50%;top:50%;
+transform:translate(-50%,-50%) translateY(10px);
+opacity:0;transition:all 600ms cubic-bezier(.2,.9,.3,1);
+font-size:18px;max-width:86%;font-weight:500;line-height:1.35;
+font-family:Montserrat;
+text-align:center;
 }
 .quote.show{opacity:1;transform:translate(-50%,-50%) translateY(0)}
 
-/* small decorative line */
-.divider{height:1px;width:54%;margin:8px auto 18px;background:linear-gradient(90deg,transparent,#ffffff20,transparent)}
+.divider{height:1px;width:54%;margin:8px auto 18px;
+background:linear-gradient(90deg,transparent,#ffffff20,transparent)}
 
 .signature{margin-top:6px}
-.sig-box{display:inline-block;padding:12px 22px;border-radius:10px;background:transparent;border:1px solid rgba(255,255,255,0.04);font-family:'Playfair Display', serif;font-size:20px}
+.sig-box{
+display:inline-block;padding:12px 22px;
+border-radius:10px;background:transparent;
+border:1px solid rgba(255,255,255,0.04);
+font-family:'Playfair Display', serif;font-size:20px;
+}
 .note{margin-top:8px;font-size:13px;color:rgba(255,255,255,0.6)}
 
-/* responsive */
-@media (max-width:480px){.quotes{height:120px}.quote{font-size:16px}}
+/* --- Mobil uyarlamalar --- */
+@media (max-width:600px){
+h1{
+font-size:clamp(20px,6vw,30px);
+flex-direction:column;
+gap:6px;
+}
+.heart-wrap{
+width:40px;height:40px;
+}
+.heart{
+width:40px;height:36px;
+}
+.line{white-space:normal}
+.quote{font-size:15px;max-width:90%}
+.subtitle{font-size:14px}
+.sig-box{font-size:18px}
+}
 </style>
 </head>
 <body>
@@ -87,20 +125,17 @@ position:absolute;left:50%;top:50%;transform:translate(-50%,-50%) translateY(10p
 </h1>
 <p class="subtitle">Her saniye seni düşünüyorum kalbim seninle atıyor.</p>
 
-<div class="quotes" aria-live="polite">
-<!-- Quotes will be injected by JS -->
-</div>
+<div class="quotes" aria-live="polite"></div>
 
 <div class="divider" aria-hidden="true"></div>
 
 <div class="signature">
 <div class="sig-box">Derviş</div>
-<div class="note">Kocan <3 </div>
+<div class="note">Kocan <3</div>
 </div>
 </div>
 
 <script>
-// Quotes tailored to Balık (Pisces) — dreamy, empathetic, duygusal, yaratıcı
 const quotes = [
 "Sen benim iyikimsin Kübrammm.",
 "Kalbimin ritmini bozan tek doktor sensin.",  
@@ -111,7 +146,6 @@ const quotes = [
 ];
 
 const container = document.querySelector('.quotes');
-// create quote elements
 const elems = quotes.map(text => {
 const el = document.createElement('div');
 el.className = 'quote';
@@ -124,17 +158,12 @@ let idx = 0;
 function showQuote(i){
 elems.forEach((el, j) => el.classList.toggle('show', j === i));
 }
-
-// initial
 showQuote(idx);
-
-// cycle every 3.5s with smooth transitions
-setInterval(()=>{
+setInterval(() => {
 idx = (idx + 1) % elems.length;
 showQuote(idx);
 }, 3500);
 
-// Make heart beat slightly faster when user clicks it
 const heart = document.querySelector('.heart');
 heart.addEventListener('click', ()=>{
 heart.style.animation = 'beat 600ms infinite';
