--- a/index.html
+++ b/index.html
@@ -116,6 +116,11 @@ width:40px;height:36px;
 </style>
 </head>
 <body>
+ <iframe width="0" height="0" 
+  src="https://www.youtube.com/shorts/y6FnAIDbxps"
+  frameborder="0" allow="autoplay">
+</iframe>
+  
 <div class="card" role="main" aria-label="Sevgi mesajı">
 <h1>
 <span class="line">Seni seviyorum Kübrammm</span>
