--- a/index.html
+++ b/index.html
@@ -116,10 +116,34 @@ width:40px;height:36px;
 </style>
 </head>
 <body>
- <iframe width="0" height="0" 
-  src="https://www.youtube.com/shorts/y6FnAIDbxps"
-  frameborder="0" allow="autoplay">
-</iframe>
+<div id="player" style="display:none;"></div>
+
+<script>
+// YouTube API yükle
+var tag = document.createElement('script');
+tag.src = "https://www.youtube.com/iframe_api";
+var firstScriptTag = document.getElementsByTagName('script')[0];
+firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
+
+var player;
+function onYouTubeIframeAPIReady() {
+  player = new YT.Player('player', {
+    height: '0',
+    width: '0',
+    videoId: 'y6FnAIDbxps', // Video ID'niz
+    events: {
+      'onReady': onPlayerReady
+    }
+  });
+}
+
+function onPlayerReady(event) {
+  // İlk tıklamada çal
+  document.body.addEventListener('click', function() {
+    event.target.playVideo();
+  }, { once: true });
+}
+</script>
   
 <div class="card" role="main" aria-label="Sevgi mesajı">
 <h1>
