--- a/index.html
+++ b/index.html
@@ -155,6 +155,7 @@ function toggleMusic() {
   }
   isPlaying = !isPlaying;
 }
+  audio.play();
 </script>
   
 <div class="card" role="main" aria-label="Sevgi mesajı">
